# serverless-fullstack

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  package-lock.json  package.json
.github/workflows/: build_backend.yaml  build_frontend.yaml  terraform_format_check.yaml
backend-api/: pyproject.toml
frontend/: .env  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: DebouncedButton.tsx
frontend/src/features/: login.tsx
frontend/src/routes/: __root.tsx  index.lazy.tsx  login.lazy.tsx
lambdas/: pyproject.toml  resources.env
lambdas/backend_api/: Dockerfile  app.py  config.py  pyproject.toml  resources.env
lambdas/backend_api/dynamodb/: users.py
lambdas/backend_api/email_client/: client.py
lambdas/backend_api/endpoints/: auth.py
lambdas/backend_api/middleware/: auth.py
lambdas/backend_api/object_store/: config.py  object_store.py
lambdas/dummy_lambda/: Dockerfile  pyproject.toml
lambdas/dummy_lambda/tests/: test_dummy.py
terraform/: Makefile  main.tf  outputs.tf
terraform/backend/: inputs.tf  main.tf  outputs.tf
terraform/dynamodb_permissions/: inputs.tf  main.tf
terraform/lambda/: inputs.tf  locals.tf  main.tf  outputs.tf
terraform/s3_bucket_permissions/: inputs.tf  main.tf
terraform/sns/: main.tf
terraform/sns_permissions/: inputs.tf  main.tf
terraform/user_interface/: main.tf
