[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["JozefTkocz <joe@bitbloom.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.0"
aws-lambda-powertools = "^2.40.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
