[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["JozefTkocz <joe@bitbloom.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.0"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.42.0"}
requests = "^2.32.3"
boto3 = "^1.34.145"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.3.2"
boto3-stubs = {extras = ["essential"], version = "^1.34.151"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy-boto3]
ignore_missing_imports = true
