[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["JozefTkocz <joe@bitbloom.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.0"
requests = "^2.32.3"
boto3 = "^1.34.145"
boto3-stubs = {extras = ["essential", "sns"], version = "^1.35.27"}
pydantic-settings = "^2.5.2"

aws-lambda-powertools = {extras = ["all"], version = "^3.1.0"}
[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.3.2"
ruff = "^0.5.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy-boto3]
ignore_missing_imports = true

[tool.mypy]
plugins = 'pydantic.mypy'
